--- a/promapp/templates/add_store.html
+++ b/promapp/templates/add_store.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
+{% block title %}Додати магазин{% endblock %}
 {% block content %}
-  <h2>Add a new Store</h2>
+  <h2>Додати магазин</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-success">Add Store</button>
+    <button type="submit" class="btn btn-primary">Додати магазин</button>
   </form>
 {% endblock %}
