--- a/promapp/templates/base.html
+++ b/promapp/templates/base.html
@@ -6,7 +6,6 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-      /* Зробимо контейнер для діаграм компактнішим */
       .chart-container {
           width: 300px;
           height: 300px;
@@ -19,7 +18,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
        <div class="container">
          <a class="navbar-brand" href="{% url 'index' %}">PROM Project</a>
-         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Перемикач навігації">
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
          </button>
          <div class="collapse navbar-collapse" id="navbarNav">
@@ -30,6 +30,29 @@
              <li class="nav-item">
                <a class="nav-link" href="{% url 'analytics' %}">Аналітика</a>
              </li>
+             <li class="nav-item">
+               <a class="nav-link" href="{% url 'import_orders_view' %}">Тестовий імпорт</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="{% url 'import_full_orders_view' %}">Повний імпорт</a>
+             </li>
+           </ul>
+           <ul class="navbar-nav">
+             {% if user.is_authenticated %}
+               <li class="nav-item">
+                  <li>Привіт, <a href="{% url 'user_profile' %}">{{ user.username }}</a></li>
+              </li>
+               <li class="nav-item">
+                 <a class="nav-link" href="{% url 'logout' %}">Вихід</a>
+               </li>
+             {% else %}
+               <li class="nav-item">
+                 <a class="nav-link" href="{% url 'login' %}">Вхід</a>
+               </li>
+               <li class="nav-item">
+                 <a class="nav-link" href="{% url 'register' %}">Реєстрація</a>
+               </li>
+             {% endif %}
            </ul>
          </div>
        </div>
