--- a/promapp/templates/index.html
+++ b/promapp/templates/index.html
@@ -6,8 +6,7 @@
   <p>Оберіть розділ для роботи:</p>
   <div class="d-grid gap-3 col-6 mx-auto">
     <a class="btn btn-primary" href="{% url 'orders_list' %}">Замовлення</a>
-    <a class="btn btn-secondary" href="{% url 'import_orders_view' %}">Тестовий імпорт</a>
-    <a class="btn btn-warning" href="{% url 'import_full_orders_view' %}">Повний імпорт</a>
+    <a class="btn btn-secondary" href="{% url 'import_orders_view' %}">Імпорт</a>
     <a class="btn btn-success" href="{% url 'analytics' %}">Аналітика</a>
   </div>
 </div>
