Додано GPT API для отримання рекоменацій від ШІ. Змінено модель Order, додано ТТН та статус доставки, проведено додаткову міграцію.

--- a/promapp/templates/base.html
+++ b/promapp/templates/base.html
@@ -33,6 +33,9 @@
              <li class="nav-item">
                <a class="nav-link" href="{% url 'import_orders_view' %}">Імпорт</a>
              </li>
+             <li class="nav-item">
+               <a class="nav-link" href="{% url 'ai_insights' %}">AI‑поради</a>
+             </li>
 
            </ul>
            <ul class="navbar-nav">
